--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pmc-website",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://www.ubcpm.club",
+  "homepage": "https://ubcpm.club",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
